<resources>
    // main
    <string name="app_name">Pairs</string>
    <string name="start_game">Start Game</string>
    <string name="continue_game">Continue Game</string>
    <string name="options">Options</string>
    <string name="reset_highscore">Reset High Score</string>
    <string name="highscore">High Score: %1$d</string>

    // options
    <string name="drag_mode">Enable Drag Mode</string>
    <string name="click_mode">Enable Click Mode</string>
    <string name="click_mode_enabled">Click Mode</string>
    <string name="drag_mode_enabled">Drag Mode</string>

    // game over
    <string name="continue1">Continue</string>
    <string name="score">Score: %1$d</string>
    <string name="new_highscore">New High Score!</string>
</resources>
