<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sean.acw.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_game"
        android:id="@+id/main_button_continuegame"
        android:layout_below="@+id/main_button_start_game"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:alpha="1" />

    <Button
        android:id="@+id/main_button_start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/main_button_continuegame"
        android:layout_alignEnd="@+id/main_button_continuegame"
        android:layout_alignLeft="@+id/main_button_continuegame"
        android:layout_alignStart="@+id/main_button_continuegame"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/main_button_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:layout_below="@+id/main_button_continuegame"
        android:layout_alignRight="@+id/main_button_continuegame"
        android:layout_alignEnd="@+id/main_button_continuegame"
        android:layout_alignLeft="@+id/main_button_continuegame"
        android:layout_alignStart="@+id/main_button_continuegame" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_highscore"
        android:id="@+id/main_button_reset_highscore"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/main_textview_highscore"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/main_textview_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="20sp" />

</RelativeLayout>
