<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sean.acw.GameOverActivity">

    <Button
        android:id="@+id/gameover_button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:text="@string/continue1" />

    <TextView
        android:id="@+id/gameover_textview_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/highscore"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/gameover_textview_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/score"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/gameover_textview_highscore"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameover_textview_newhighscore"
        android:text=""
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>
